# mff_stuff

./: .gitignore  .gitmodules  README.md
NDBI048_data_science/: ndb048_jokes_analysis.html  ndb048_jokes_analysis.ipynb  requirements.txt  topics.csv
NPFL129-ml-greenhorns/: .gitignore  diacritization.py  grid_search.py  imdb_sentiment.py  isnt_it_ironic.py  kmeans.py  linear_regression_sgd.py  logistic_regression_sgd.py  miniaturization.py  mlp_classification_sgd.py  naive_bayes.py  pca.py  rental_competition.py  tf_idf.py  thyroid_competition.py
NPFL129_ml_greenhorns/: decision_tree.py  diacritization.old.py  feature_engineering.py  k_nearest_neighbors.py  linear_regression_l2.py  metric_correlation.py  mnist_competition.py  multilabel_classification_sgd.py  nli_competition.py  perceptron.py  permutation_test.py  random_forest.py  rental_competition_old.py  softmax_classification_sgd.py
NPRG014_koncepty_prog_jazyku/: hw1.groovy  hw10_shapes.d.ts  hw2.groovy  hw3.groovy  hw4.groovy  hw5_ComplexNumbers.scala  hw6_ExplicitStateTest.scala  hw7_Checker.scala  hw8_JsonSerialization.scala
NPRG042_programovani_v_paralelnim_prostredi/: 05spark.py
NPRG082_rust/: Cargo.toml
NSWI126-pokrocile-nastroje/: evalform2024-10-23.md  evalform2024-10-30.md  (+3 more)
NSWI177_linux/11/tapsum2json/: .gitignore  README.md  requirements.txt  setup.cfg
NSWI177_linux/11/tapsum2json/src/tapsum2json/: tapsum2json.py
NSWI177_linux/22/: README.md  example.j2  example.output  example.txt  requirements.txt  setup.cfg  templater.py
NSWI177_linux/22/src/nswi177_jinja_templater/: templater.py
(+1268 files in other folders)
