[metadata]
name = nswi177-jinja-templater
version = 0.0.1
author = Zdenek Tomis
author_email = zdenektomis@matfyz.cz
description = Jinja templater
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    Jinja2 ~= 3.1.2
    MarkupSafe ~= 2.1.1
    PyYAML ~= 6.0
    roman ~= 3.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    nswi177-jinja-templater = nswi177_jinja_templater.templater:main
