[metadata]
name = tapsum2json
version = 0.0.1
author = Zdenek Tomis
author_email = zdenektomis@matfyz.cz
description = Tapsum to json converter
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    tap.py ~= 3.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    tapsum2json = tapsum2json.tapsum2json:main